# src/api/index.ts
@@ -7,16 +7,23 @@ export { CancelablePromise, CancelError } from './core/CancelablePromise';
 export { OpenAPI } from './core/OpenAPI';
 export type { OpenAPIConfig } from './core/OpenAPI';
 
+export { BedTempRequest } from './models/BedTempRequest';
+export { ExtrudeRequest } from './models/ExtrudeRequest';
 export { FileInfo } from './models/FileInfo';
 export type { FileListResponse } from './models/FileListResponse';
+export { HomeRequest } from './models/HomeRequest';
 export type { InfoResponse } from './models/InfoResponse';
 export type { JobResponse } from './models/JobResponse';
 export type { JobStatus } from './models/JobStatus';
 export { PrinterStatus } from './models/PrinterStatus';
+export { PrintheadMoveRequest } from './models/PrintheadMoveRequest';
+export { RetractRequest } from './models/RetractRequest';
 export type { StatusResponse } from './models/StatusResponse';
+export { StepperRequest } from './models/StepperRequest';
 export type { Storage } from './models/Storage';
 export type { StorageResponse } from './models/StorageResponse';
 export type { StorageStatus } from './models/StorageStatus';
+export { ToolTempRequest } from './models/ToolTempRequest';
 export type { VersionResponse } from './models/VersionResponse';
 
 export { DefaultService } from './services/DefaultService';
